# lapctl

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  justfile  lapctl.py
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  main.rs
src/commands/: battery.rs  cooling.rs  display.rs  gpu.rs  inhibit.rs  install_rules.rs  mod.rs  power.rs  status.rs  touchpad.rs
src/daemon/: dbus_iface.rs  mod.rs
src/hardware/: battery.rs  gpu.rs  mod.rs
src/utils/: system.rs
tests/: cli.rs  gpu.rs  inhibit.rs
